force-app/main/default/objects/ODMS_Team_Mapping__c/ODMS_Team_Mapping__c.object-meta.xml
<CustomObject>
    <label>ODMS Team Mapping</label>
    <nameField>
        <displayFormat>OTP{00000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ODMS Team Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>