force-app/main/default/objects/ODMS_Team_Mapping__c/fields/Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses__c</fullName>
    <label>Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>