force-app/main/default/objects/ODMS_Team_Mapping__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>USA/Canada</fullName>
                <isActive>false</isActive>
                <label>USA/Canada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>