force-app/main/default/objects/ODMS_Team_Mapping__c/fields/Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team__c</fullName>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bath &amp; Shower - Retail Consumer</fullName>
            </value>
            <value>
                <fullName>Bath &amp; Shower - Trade</fullName>
            </value>
            <value>
                <fullName>BLS - AS/DXV</fullName>
            </value>
            <value>
                <fullName>CA - All Products except Repair Parts</fullName>
            </value>
            <value>
                <fullName>CA - Bath Faucets, Bath Accessories</fullName>
            </value>
            <value>
                <fullName>CA - Customer Master</fullName>
            </value>
            <value>
                <fullName>CA - DC Plant 84</fullName>
            </value>
            <value>
                <fullName>CA - DC - Safety Tubs (167)</fullName>
            </value>
            <value>
                <fullName>CA - Fiat</fullName>
            </value>
            <value>
                <fullName>CA - FIAT, Chinaware, Furniture, commercial chinaware, commercial brass</fullName>
            </value>
            <value>
                <fullName>CA - Order Management - Central</fullName>
            </value>
            <value>
                <fullName>CA - Order Management - East</fullName>
            </value>
            <value>
                <fullName>CA - Order Management - GROHE</fullName>
            </value>
            <value>
                <fullName>CA - Order Management - Retail</fullName>
            </value>
            <value>
                <fullName>CA - Order Management - West</fullName>
            </value>
            <value>
                <fullName>CA - Pricing</fullName>
            </value>
            <value>
                <fullName>CA - Quotes</fullName>
            </value>
            <value>
                <fullName>CA - Repair Parts</fullName>
            </value>
            <value>
                <fullName>CA - Shower Products, Valves, Safety Tub</fullName>
            </value>
            <value>
                <fullName>CA - Shower Walls, Shower Bases, Bathing, Kitchen Faucet, Kitchen Sinks, Kitchen Accessories</fullName>
            </value>
            <value>
                <fullName>CA - Special Select</fullName>
            </value>
            <value>
                <fullName>CA - Warranty</fullName>
            </value>
            <value>
                <fullName>CA - Warranty - American Standard/DXV</fullName>
            </value>
            <value>
                <fullName>CA - Warranty - GROHE</fullName>
            </value>
            <value>
                <fullName>CA - ZClaims / Collections</fullName>
            </value>
            <value>
                <fullName>Chinaware - AS/DXV</fullName>
            </value>
            <value>
                <fullName>Chinaware - Retail Consumer</fullName>
            </value>
            <value>
                <fullName>Chinaware - Toilet Seats</fullName>
            </value>
            <value>
                <fullName>Chinaware - Trade</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>