force-app/main/default/objects/ODMS_Team_Mapping__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA - Claims and Collections</fullName>
            </value>
            <value>
                <fullName>CA - Customer Care</fullName>
            </value>
            <value>
                <fullName>CA - Master Data</fullName>
            </value>
            <value>
                <fullName>CA - Pricing</fullName>
            </value>
            <value>
                <fullName>CA - Product Management</fullName>
            </value>
            <value>
                <fullName>CA -Tech Support</fullName>
            </value>
            <value>
                <fullName>Claims and Collections</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Distribution Center</fullName>
            </value>
            <value>
                <fullName>Master Data</fullName>
            </value>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>SOIP</fullName>
            </value>
            <value>
                <fullName>CA - Distribution Center</fullName>
                <isActive>false</isActive>
                <label>CA - Distribution Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>