force-app/main/default/objects/ODMS_Team_Mapping__c/listViews/All_ODMS_Records.listView-meta.xml
<ListView>
    <fullName>All_ODMS_Records</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Team__c</columns>
    <columns>Sub_Team__c</columns>
    <columns>Email_Addresses__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All ODMS Records</label>
</ListView>